# ToDoList_project

./: CMakeLists.txt  main.cpp
src/: task.cpp  task.h  todo_list.cpp  todo_list.h
test/: task_test.cpp
